Decrement mOpenFormCount only if there's an open form. b=115262, r=heikki, sr=jst.\n Counter related code should be DEBUG only. b=92618, r=heikki, sr=jst